examples/test/testpolicy14679.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14679
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key46: value37
      key33: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value18
      podSelector:
        matchLabels:
          key25: value27
          key22: value45
          key2: value27
